--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ requires-python = ">=3.13"
 dependencies = [
     "duckdb>=1.4.2",
     "ipykernel>=7.1.0",
+    "marimo>=0.18.4",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "polars>=1.35.2",
+    "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
     "vortex-data>=0.55.0",
 ]
