--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "polars>=1.35.2",
+    "ruff>=0.14.11",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
     "vortex-data>=0.55.0",
