--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,12 @@ requires-python = ">=3.13"
 dependencies = [
     "duckdb>=1.4.2",
     "ipykernel>=7.1.0",
-    "marimo>=0.18.4",
+    "marimo>=0.19.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "polars>=1.35.2",
+    "ruff>=0.14.11",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
     "vortex-data>=0.55.0",
@@ -34,4 +35,7 @@ select = [
     "C4", # flake8-comprehensions
     "A", # flake8-builtins
 ]
-ignore = ["PGH003", "PGH004"]
+ignore = ["PGH003", "PGH004", "E501"]
+
+[tool.ruff.lint.pycodestyle]
+ignore-overlong-task-comments = true
