--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,8 @@ jobs:
 
             - name: 📄 Export notebook
               run: |
-                  uv run marimo export html-wasm web/property_price_visualisation.py -o property_price_visualisation --mode run
+                  uv run marimo export html web/property_price_visualisation.py -o output_dir/index.html --no-include-code
+                  # uv run marimo export html-wasm web/property_price_visualisation.py -o property_price_visualisation --mode run
 
             - name: 📦 Upload Pages Artifact
               uses: actions/upload-pages-artifact@v3
